fix image to reduce layout shift

--- a/src/resources/elements/side-bar/side-bar.scss
+++ b/src/resources/elements/side-bar/side-bar.scss
@@ -6,8 +6,14 @@ side-bar {
   position: fixed;
 
   a.logo {
-    margin-left: 38px;
     margin-top: 28px;
+
+    margin: 30px 30px 30px;
+
+    >img {
+      height: auto;
+      width: 100%;
+    }
 
     &:focus-visible {
       outline: 0;
